@@ -166,10 +166,6 @@ Convert and replace b.txt. Convert d.txt and write to f.txt.
 .IP 
 .B dos2unix \-n c.txt e.txt \-o a.txt b.txt \-n d.txt f.txt
 
-.SH "BUGS"
-The program does not work properly under MSDOS in stdio processing mode. 
-If you know why is that so, please tell me.
-
 .SH "AUTHORS"
 Benjamin Lin \- <blin@socs.uts.edu.au>
 
